codex-rs/astral-tui/src/snapshots/astral_tui__surface__tests__scrollback_focus_fold_surface.snap
---
source: astral-tui/src/surface_tests.rs
expression: "format!(\"COLLAPSED\\n{collapsed}\\n\\nEXPANDED\\n{expanded}\")"
---
COLLAPSED
 ⎇ main  /workspace

 › inspect this repo


 I’m tracing the relevant data flow.

┃› Run cargo test -p astral-tui  2.4s






 ◇ Working

 ╭────────────────────────────────────────────────────────────────────────────╮
 │ ❯                                                                          │
 ╰────────────────────────────────────────────── claude-sonnet-4 · workspace ─╯
 e:expand  │  Enter:open  │  Tab:prompt

EXPANDED
 ⎇ main  /workspace

 › inspect this repo


 I’m tracing the relevant data flow.

┃⌄ Run cargo test -p astral-tui  2.4s
┃  │ 150 passed
┃  │ 0 failed




 ◇ Working

 ╭────────────────────────────────────────────────────────────────────────────╮
 │ ❯                                                                          │
 ╰────────────────────────────────────────────── claude-sonnet-4 · workspace ─╯
 e:collapse  │  Enter:open  │  Tab:prompt
