codex-rs/astral-tui/src/snapshots/astral_tui__surface__tests__shortcuts_modal_scrolled_snapshot.snap
---
source: astral-tui/src/surface_tests.rs
expression: "render_at_size(&mut state, &session, 80, 24)"
---

  ⎇ main  /workspace


  › inspect this┌─ Keyboard shortcuts ─────────────────────[×]─┐
                │                                              │
  I’m tracing th│  /          Open slash-command discovery     │
                │  ↑/↓        Navigate menus / scroll lists    │
                │  Tab        Complete item / switch focus     │
                │  j/k        Select foldable entry            │
                │  e / Enter  Toggle selected entry            │
                │  h/l        Collapse / expand entry          │
                │  Esc        Close the focused menu or modal  │
                │  Y          Approve a pending request        │
                │  A          Approve for the session when av  │
                │  N          Decline a pending request        │
  ◇ Working     │                                              │
                │                                              │
  ╭─────────────│            ↑/↓ scroll · Esc close            │─────────────╮
  │ ❯           └──────────────────────────────────────────────┘             │
  ╰──────────────────────────────────────────── claude-sonnet-4 · workspace ─╯

  Shift+Tab:mode  │  Ctrl+.:shortcuts
