codex-rs/astral-tui/src/snapshots/astral_tui__surface__tests__shortcuts_modal_snapshot.snap
---
source: astral-tui/src/surface_tests.rs
expression: "render_at_size(&mut state, &session, 80, 24)"
---

  ⎇ main  /workspace


  › inspect this┌─ Keyboard shortcuts ─────────────────────[×]─┐
                │                                              │
                │  Enter      Send / submit focused input      │
  I’m tracing th│  Shift+Tab  Cycle collaboration mode         │
                │  Ctrl+.     Toggle shortcuts window          │
                │  Ctrl+C     Interrupt / clear / idle exit    │
                │  Ctrl+D     Exit when the composer is empty  │
                │  Ctrl+O     Copy the last agent response     │
                │  PageUp     Scroll history up                │
                │  PageDown   Scroll history down              │
                │  /          Open slash-command discovery     │
                │  ↑/↓        Navigate menus / scroll lists    │
  ◇ Working     │  Tab        Complete item / switch focus     │
                │                                              │
  ╭─────────────│            ↑/↓ scroll · Esc close            │─────────────╮
  │ ❯           └──────────────────────────────────────────────┘             │
  ╰──────────────────────────────────────────── claude-sonnet-4 · workspace ─╯

  Shift+Tab:mode  │  Ctrl+.:shortcuts
