codex-rs/astral-tui/src/snapshots/astral_tui__surface__tests__skill_and_plugin_mention_menu_snapshot.snap
---
source: astral-tui/src/surface_tests.rs
expression: "render_at_size(&mut state, &session, 80, 24)"
---

  ⎇ main  /workspace


  › inspect this repo

  I’m tracing the relevant data flow.






  ╭─ skills & plugins ───────────────────────────────────────────────────────╮
  │› Plugin  Browser Use         Control the active browser                  │
  │  Skill   Code Review         Review a pull request                       │
  ╰──────────────────────────────────────────────────────────────────────────╯

  ╭──────────────────────────────────────────────────────────────────────────╮
  │ ❯ $                                                                      │
  ╰──────────────────────────────────────────── claude-sonnet-4 · workspace ─╯

  ↑/↓:navigate  │  Tab:select  │  Esc:close
