codex-rs/astral-tui/src/snapshots/astral_tui__surface__tests__slash_command_menu_snapshot.snap
---
source: astral-tui/src/surface_tests.rs
expression: "render_at_size(&mut state, &session, 80, 24)"
---

  ⎇ main  /workspace


  › inspect this repo


  I’m tracing the relevant data flow.





  ╭─ commands ───────────────────────────────────────────────────────────────╮
  │› /model          Choose model and reasoning effort                       │
  │  /permissions    Choose what Astral can do                               │
  ╰──────────────────────────────────────────────────────────────────────────╯

  ╭──────────────────────────────────────────────────────────────────────────╮
  │ ❯ /model                                                                 │
  ╰──────────────────────────────────────────── claude-sonnet-4 · workspace ─╯

  ↑/↓:navigate  │  Tab:complete  │  Esc:close
