codex-rs/astral-tui/src/snapshots/astral_tui__surface__tests__status_modal_snapshot.snap
---
source: astral-tui/src/surface_tests.rs
expression: "render_at_size(&state, &session, 80, 24)"
---

  ⎇ main  /workspace

  ❯ inspect this repo
                ┌─ Session status ─────────────────────────[×]─┐
  I’m tracing th│                                              │
                │  Thread             thread-1                 │
                │  Model              claude-sonnet-4 · anthr  │
                │  Working directory  /workspace               │
                │  Context            9.2K / 500K              │
                │                                              │
                │                                              │
                │                                              │
                │                                              │
                │                                              │
                │                                              │
  ◇ Working     │                                              │
                │                                              │
  ╭─────────────│                  Esc close                   │─────────────╮
  │ ❯           └──────────────────────────────────────────────┘             │
  ╰──────────────────────────────────────────── claude-sonnet-4 · anthropic ─╯

  Enter:send  │  PgUp/PgDn:scroll  │  Ctrl+O:copy  claude-sonnet-4 · anthropic
