codex-rs/astral-tui/src/snapshots/astral_tui__surface__tests__timeline_rail_surface_snapshot.snap
---
source: astral-tui/src/surface_tests.rs
expression: "render_at_size(&mut state, &session, 80, 24)"
---

  ⎇ main  /workspace


                                                                               █
  I’m tracing the relevant data flow.                                          █
                                                                               █
                                                                               ▲
  › continue with the implementation                                          ━━
                                                                               ─
                                                                               ▼
  I’m validating the next layer.                                               █
                                                                               █
  Worked for 1.0s                                                              █
                                                                               █

  ◇ Working

  ╭──────────────────────────────────────────────────────────────────────────╮
  │ ❯                                                                        │
  ╰──────────────────────────────────────────── claude-sonnet-4 · workspace ─╯

  Enter:queue  │  Shift+Tab:mode  │  Ctrl+.:shortcuts
