codex-rs/astral-tui/src/snapshots/astral_tui__surface__tests__todo_notification_surface.snap
---
source: astral-tui/src/surface_tests.rs
expression: rendered
---

  ⎇ main  /workspace


  › inspect this repo

  I’m tracing the relevant data flow.
  ◆ Todos
    Keep the provider-neutral projection visible.
  ✓ Trace app-server notification
  ▶ Render Grok-style todo rows
  □ Verify Claude and Codex surfaces








  ◇ Working

  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮
  │ ❯                                                                                            │
  ╰──────────────────────────────────────────────────────────────── claude-sonnet-4 · workspace ─╯

  Shift+Tab:mode  │  Ctrl+.:shortcuts
